<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".view.ContasFormFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/drawer_despesa_icon"
        android:text=" Nova Conta"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_Valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_limite_icon"
            android:drawablePadding="10dp"
            android:hint="@string/digite_um_valor"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_Descrição"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_menu_contas"
            android:drawablePadding="10dp"
            android:hint="@string/digite_uma_descri_cao"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_Data_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/drawer_data_icon"
            android:drawablePadding="10dp"
            android:hint="@string/data"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Cancelar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/economia_negativa"
            android:gravity="center"
            android:text="@string/btn_cancelsr"
            app:cornerRadius="16dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/Widget.MaterialComponents.Button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Salvar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:gravity="center"
            android:text="@string/btn_salvar"
            app:cornerRadius="16dp"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>

</LinearLayout>